--- a/frontend/react-app/src/styles/index.css
+++ b/frontend/react-app/src/styles/index.css
@@ -1,24 +1,7 @@
 /* src/styles/index.css */
 
-/* Import Ubuntu font from Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400&display=swap');
 
-/* Apply globally */
 * {
-  font-family: 'Ubuntu', sans-serif;
-}
-
-body {
-  font-family: 'Ubuntu', sans-serif;
-}
-
-/* Optional: Different weights for headings */
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Ubuntu', sans-serif;
-  font-weight: 500;
-}
-
-/* Optional: Buttons */
-button, input, textarea, select {
   font-family: 'Ubuntu', sans-serif;
 }
